# test-game

./: .gitignore  Cargo.toml
assets/: simple-longsword.glb
src/: core.rs  input.rs  main.rs  ui.rs  weapon_controller.rs
src/core/: mod.rs  ui.rs
src/player/: camera.rs  mod.rs  plugin.rs  weapon.rs
src/scenes/: mod.rs  test.rs
