[package]
name = "ik"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = "0.3.0"
bevy-butler = "0.6.2"
bevy_enhanced_input = "0.11.0"
bevy_skein = "0.2.1"
iyes_perf_ui = "0.5.0"

[dependencies.bevy]
version = "0.16.0"
features = ["wayland", "dynamic_linking"]


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
